[package]
name = "pico_expirements"
version = "0.1.0"
authors = ["willemml <willem@leit.so>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", features = ["rt"], branch="main" }
pico = { git = "https://github.com/rp-rs/rp-hal", features = ["rt"], branch="main" }

# this lets you use `cargo fix`!
[[bin]]
name = "pico_expirements"
test = false
bench = false

