[package]
name = "pico_expirements"
version = "0.1.0"
authors = ["willemml <willem@leit.so>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.2.0"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.1", features = ["inline-asm"] }
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
atomic-polyfill = { version = "0.1.1" }
futures = { version = "0.3.8", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", branch = "master", features = ["defmt", "defmt-trace"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", branch = "master", features = ["defmt", "defmt-trace"] }
rp2040-pac2 = { git = "https://github.com/embassy-rs/rp2040-pac2", rev="e8635fd05f43b6c21ec462fb8c06140e1fb26961" }
epd-waveshare = { git = "https://github.com/Caemor/epd-waveshare", branch = "main", features = ["graphics"] }
embedded-graphics = { version = "0.7.1", features = ["nalgebra_support", "fixed_point"] }
embedded-graphics-core = { version = "0.3.2", features = ["nalgebra_support"] }
embedded-text = { version = "0.5.0-beta.1", default-features = false }


# this lets you use `cargo fix`!
[[bin]]
name = "pico_expirements"
test = false
bench = false

